src/test/deca/codegen/invalid/resultats/asm-ima.res
Pas d'instruction apres l'etiquette code.a.asm
  ** IMA ** ERREUR ** Plus d'instructions !!
